--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
 		</dependency>
-		<!-- Spring Core -->
+		<!-- Spring Core section-->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
